# USINASOFT-Back

./: .env.example  .gitignore  LICENSE  README.md  db.sqlite3  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt
atividades/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
atividades/migrations/: 0001_initial.py  0002_initial.py
pecas/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
pecas/migrations/: 0001_initial.py  0002_initial.py
producao/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
producao/migrations/: 0001_initial.py  0002_initial.py  0003_ordemproducao_producao_or_data_fi_35b23e_idx.py  0003_ordemproducao_responsavel.py  0004_alter_ordemproducao_status.py
usinasoft/: asgi.py  settings.py  urls.py  wsgi.py
usuarios/: admin.py  models.py  serializers.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py
